# teller

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile0  README-DOCKER.md  README.md  app.py  commit_history.txt  current_deps.txt  docker-compose.yml  flask_ui_app.py  flask_ui_app_new.py  main.py  migrate_stories.py  paths_to_remove.txt  patterns_to_filter.txt  pyproject.toml  pyproject.yaml  requirements-minimal-v2.txt  requirements-minimal.txt  requirements.txt  script_default_fields.py  script_philosophy.py  script_silence_tags.py  scripts.py  test_app.py  test_comprehensive_fixes.html  test_small_vs_tiny_mistral.py  test_subtitle.html  test_topic_cycling.html  text_to_sound_effects.py
.github/workflows/: build.yml
files_to_pick_from/: audioControls3.js  loadingAnimation.js  sfx.js  shuffleUtils.js  storage.js  utils.js  view.js  webAudioAPI.js  webAudioAPI2.js
functions_factory/: text_generation_with_llms.py
functions_factory/css_factory/: screens.css
old_alternate_files/: audioControls.js  main.js  main2.js  style_gpt.css
src/: .gitignore  requirements.txt  wrappers.py
static/: extra_functions.txt  script.js  script_7.js  script_multi_words_selection.js  script_multiple_selection_2.js  script_up.js  sms3.js  sms3.js.backup  style.css  style_gemini_highlighted.css  style_multi_words_selection.css  style_up.css
teller_vite/: index.html  package-lock.json  package.json  vite.config.js  vite.config.mjs
templates/: AudioSm.sim.html  index.html  index2.html  index2t.html  index_2.html  index_7.html  indext.html
venv_v2/: pyvenv.cfg
(+1979 files in other folders)
